# aquabot

./: README.md
aquabot_description/: CMakeLists.txt  package.xml
aquabot_description/urdf/: aquabot.urdf  mesh
aquabot_ekf/: CMakeLists.txt  package.xml
aquabot_ekf/include/aquabot_ekf/: boat.h  gps2enu.h
aquabot_ekf/launch/: ekf_launch.py
aquabot_ekf/params/: ekf.yaml  props.yaml
aquabot_ekf/src/: gps2pose.cpp  gz2ros.cpp
aquabot_gz/: CMakeLists.txt  package.xml
aquabot_gz/hooks/: resource_paths.dsv.in
aquabot_gz/launch/: turbines_launch.py
aquabot_gz/models/aquabot_marker_0_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_0_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_0_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_0_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_1_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_1_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_1_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_1_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_2_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_2_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_2_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_2_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_3_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_3_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_3_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_3_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_4_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_4_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_4_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_4_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_5_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_5_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_5_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_5_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_6_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_6_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_6_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_6_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_7_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_7_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_7_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_7_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_8_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_8_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_8_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_8_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_9_KO/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_9_KO/meshes/: Marker0.dae
aquabot_gz/models/aquabot_marker_9_OK/: model.config  model.sdf
aquabot_gz/models/aquabot_marker_9_OK/meshes/: Marker0.dae
aquabot_gz/models/aquabot_windturbine_main/: model.config  model.sdf
aquabot_gz/models/aquabot_windturbine_main/mesh/: main.dae
aquabot_gz/models/aquabot_windturbine_rotor/: model.config  model.sdf
aquabot_gz/models/aquabot_windturbine_rotor/mesh/: rotor.dae
aquabot_gz/src/: WindturbinesInspectionScoringPlugin.cc  WindturbinesInspectionScoringPlugin.hh
aquabot_gz/src/vrx/: AcousticPingerPlugin.cc  AcousticPingerPlugin.hh  ScoringPlugin.cc  ScoringPlugin.hh  WaveVisual.cc  Wavefield.cc  Wavefield.hh
aquabot_gz/worlds/: aquabot_windturbines_easy.sdf  aquabot_windturbines_hard.sdf  aquabot_windturbines_medium.sdf
aquabot_motion/: CMakeLists.txt  package.xml
aquabot_motion/launch/: Twist.yaml  manual_launch.py
aquabot_motion/src/: cmd.py  planner.py
